Fix spacing between resize and comments buttons

--- a/www/pad/app-pad.less
+++ b/www/pad/app-pad.less
@@ -80,7 +80,7 @@ body.cp-app-pad {
         order: 2;
         position: relative;
         height: 28px;
-        width: 36px;
+        width: 26px;
         margin-left: 10px;
         margin-top: 10px;
         margin-right: 0px;
